--- a/week_03/04_let_const/index.html
+++ b/week_03/04_let_const/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Shop</title>
+  <title>Let and cobst</title>
 </head>
 <body style="background: #222;">
   
-  <script src="03_shop.js"></script>
+  <script src="code.js"></script>
 </body>
 </html>
