add week 4 day 1

--- a/week_03/05_intro_to_dom/index.html
+++ b/week_03/05_intro_to_dom/index.html
@@ -20,7 +20,18 @@
   <p id="first">Lorem, ipsum dolor.</p>
   <p class="bold second">Lorem, ipsum dolor.</p>
   <p class="bold">Lorem, ipsum dolor.</p>
+  <p class="bold">Lorem, ipsum dolor.</p>
 
   <!-- <script src="code.js"></script> -->
+
 </body>
 </html>
+
+<style>
+
+  #first {
+    color: black;
+  }
+
+
+</style>
