--- a/week_04/02_click/index.html
+++ b/week_04/02_click/index.html
@@ -42,6 +42,11 @@
       height: 100px;
     }
 
+    .box.even {
+      background: rgb(255, 128, 128);
+      border: solid 1px rgb(128, 0, 0);
+    }
+
   </style>
   <script src="code.js" defer></script>
 </head>
