add todo completed

--- a/week_06/02_todo/index.html
+++ b/week_06/02_todo/index.html
@@ -25,7 +25,7 @@
     </div>
     
   </main>
-  <!-- <div class="toggleDarkMode"><img src="images/moon.svg" class="darkmode dark" alt="Moon icon (dark mode)" title="toggle dark mode"></div> -->
+  <div class="toggleDarkMode"><img src="images/moon.svg" class="darkmode dark" alt="Moon icon (dark mode)" title="toggle dark mode"></div>
   <footer>
     <small>Made with ❤️</small>
   </footer>
